// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typeof-symbol basic 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      function _typeof(obj) {
        if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") {
          _typeof = function _typeof(obj) {
            return typeof obj;
          };
        } else {
          _typeof = function _typeof(obj) {
            return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj;
          };
        }

        return _typeof(obj);
      }

      _typeof({}) === \\"object\\";
    },
    {},
  ]
})"
`;

exports[`typeof-symbol builtin-global 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      function _typeof(obj) {
        if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") {
          _typeof = function _typeof(obj) {
            return typeof obj;
          };
        } else {
          _typeof = function _typeof(obj) {
            return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj;
          };
        }

        return _typeof(obj);
      }

      // https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects
      _typeof(null) === null;
      _typeof(undefined) === undefined;
      (typeof AggregateError === \\"undefined\\" ? \\"undefined\\" : _typeof(AggregateError)) === \\"object\\";
      (typeof Array === \\"undefined\\" ? \\"undefined\\" : _typeof(Array)) === \\"object\\";
      (typeof ArrayBuffer === \\"undefined\\" ? \\"undefined\\" : _typeof(ArrayBuffer)) === \\"ArrayBuffer\\";
      (typeof AsyncFunction === \\"undefined\\" ? \\"undefined\\" : _typeof(AsyncFunction)) === [];
      (typeof Atomics === \\"undefined\\" ? \\"undefined\\" : _typeof(Atomics)) === {};
      (typeof BigInt === \\"undefined\\" ? \\"undefined\\" : _typeof(BigInt)) === function() {};
      (typeof BigInt64Array === \\"undefined\\" ? \\"undefined\\" : _typeof(BigInt64Array)) === (0, function() {})();
      _typeof(BigUint64Array) === true;
      (typeof Boolean === \\"undefined\\" ? \\"undefined\\" : _typeof(Boolean)) === false;
      (typeof DataView === \\"undefined\\" ? \\"undefined\\" : _typeof(DataView)) === 1;
      (typeof Date === \\"undefined\\" ? \\"undefined\\" : _typeof(Date)) !== \\"object\\";
      (typeof Error === \\"undefined\\" ? \\"undefined\\" : _typeof(Error)) === Error;
      (typeof EvalError === \\"undefined\\" ? \\"undefined\\" : _typeof(EvalError)) === \\"object\\";
      (typeof Float32Array === \\"undefined\\" ? \\"undefined\\" : _typeof(Float32Array)) === \\"object\\";
      (typeof Function === \\"undefined\\" ? \\"undefined\\" : _typeof(Function)) === \\"object\\";
      (typeof Generator === \\"undefined\\" ? \\"undefined\\" : _typeof(Generator)) === \\"object\\";
      (typeof GeneratorFunction === \\"undefined\\" ? \\"undefined\\" : _typeof(GeneratorFunction)) === \\"object\\";
      (typeof Infinity === \\"undefined\\" ? \\"undefined\\" : _typeof(Infinity)) === \\"object\\";
      (typeof Int16Array === \\"undefined\\" ? \\"undefined\\" : _typeof(Int16Array)) === \\"object\\";
      (typeof Int32Array === \\"undefined\\" ? \\"undefined\\" : _typeof(Int32Array)) === \\"object\\";
      (typeof Int8Array === \\"undefined\\" ? \\"undefined\\" : _typeof(Int8Array)) === \\"object\\";
      (typeof InternalError === \\"undefined\\" ? \\"undefined\\" : _typeof(InternalError)) === \\"object\\";
      (typeof Intl === \\"undefined\\" ? \\"undefined\\" : _typeof(Intl)) === \\"object\\";
      (typeof JSON === \\"undefined\\" ? \\"undefined\\" : _typeof(JSON)) === \\"object\\";
      (typeof Map === \\"undefined\\" ? \\"undefined\\" : _typeof(Map)) === \\"object\\";
      (typeof Math === \\"undefined\\" ? \\"undefined\\" : _typeof(Math)) === \\"object\\";
      (typeof NaN === \\"undefined\\" ? \\"undefined\\" : _typeof(NaN)) === \\"object\\";
      (typeof Number === \\"undefined\\" ? \\"undefined\\" : _typeof(Number)) === \\"object\\";
      (typeof Object === \\"undefined\\" ? \\"undefined\\" : _typeof(Object)) === \\"object\\";
      (typeof Promise === \\"undefined\\" ? \\"undefined\\" : _typeof(Promise)) === \\"object\\";
      (typeof Proxy === \\"undefined\\" ? \\"undefined\\" : _typeof(Proxy)) === \\"object\\";
      (typeof RangeError === \\"undefined\\" ? \\"undefined\\" : _typeof(RangeError)) === \\"object\\";
      _typeof(ReferenceError) === \\"object\\";
      (typeof Reflect === \\"undefined\\" ? \\"undefined\\" : _typeof(Reflect)) === \\"object\\";
      (typeof RegExp === \\"undefined\\" ? \\"undefined\\" : _typeof(RegExp)) === \\"object\\";
      (typeof Set === \\"undefined\\" ? \\"undefined\\" : _typeof(Set)) === \\"object\\";
      (typeof SharedArrayBuffer === \\"undefined\\" ? \\"undefined\\" : _typeof(SharedArrayBuffer)) === \\"object\\";
      (typeof String === \\"undefined\\" ? \\"undefined\\" : _typeof(String)) === \\"object\\";
      (typeof Symbol === \\"undefined\\" ? \\"undefined\\" : _typeof(Symbol)) === \\"object\\";
      (typeof SyntaxError === \\"undefined\\" ? \\"undefined\\" : _typeof(SyntaxError)) === \\"object\\";
      (typeof TypeError === \\"undefined\\" ? \\"undefined\\" : _typeof(TypeError)) === \\"object\\";
      (typeof TypedArray === \\"undefined\\" ? \\"undefined\\" : _typeof(TypedArray)) === \\"object\\";
      (typeof URIError === \\"undefined\\" ? \\"undefined\\" : _typeof(URIError)) === \\"object\\";
      (typeof Uint16Array === \\"undefined\\" ? \\"undefined\\" : _typeof(Uint16Array)) === \\"object\\";
      (typeof Uint32Array === \\"undefined\\" ? \\"undefined\\" : _typeof(Uint32Array)) === \\"object\\";
      (typeof Uint8Array === \\"undefined\\" ? \\"undefined\\" : _typeof(Uint8Array)) === \\"object\\";
      (typeof Uint8ClampedArray === \\"undefined\\" ? \\"undefined\\" : _typeof(Uint8ClampedArray)) === \\"object\\";
      (typeof WeakMap === \\"undefined\\" ? \\"undefined\\" : _typeof(WeakMap)) === \\"object\\";
      (typeof WeakSet === \\"undefined\\" ? \\"undefined\\" : _typeof(WeakSet)) === \\"object\\";
      (typeof WebAssembly === \\"undefined\\" ? \\"undefined\\" : _typeof(WebAssembly)) === \\"object\\";
      (typeof decodeURI === \\"undefined\\" ? \\"undefined\\" : _typeof(decodeURI)) === \\"object\\";
      (typeof decodeURIComponent === \\"undefined\\" ? \\"undefined\\" : _typeof(decodeURIComponent)) === \\"object\\";
      (typeof encodeURI === \\"undefined\\" ? \\"undefined\\" : _typeof(encodeURI)) === \\"object\\";
      (typeof encodeURIComponent === \\"undefined\\" ? \\"undefined\\" : _typeof(encodeURIComponent)) === \\"object\\";
      (typeof escape === \\"undefined\\" ? \\"undefined\\" : _typeof(escape)) === \\"object\\";
      (typeof eval === \\"undefined\\" ? \\"undefined\\" : _typeof(eval)) === \\"object\\";
      (typeof globalThis === \\"undefined\\" ? \\"undefined\\" : _typeof(globalThis)) === \\"object\\";
      (typeof isFinite === \\"undefined\\" ? \\"undefined\\" : _typeof(isFinite)) === \\"object\\";
      _typeof(isNaN) === \\"object\\";
      (typeof parseFloat === \\"undefined\\" ? \\"undefined\\" : _typeof(parseFloat)) === \\"object\\";
      (typeof parseInt === \\"undefined\\" ? \\"undefined\\" : _typeof(parseInt)) === \\"object\\";
      (typeof unescape === \\"undefined\\" ? \\"undefined\\" : _typeof(unescape)) === \\"object\\";
      (typeof uneval === \\"undefined\\" ? \\"undefined\\" : _typeof(uneval)) === \\"object\\";
    },
    {},
  ]
})"
`;

exports[`typeof-symbol builtin-global-string 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      function _typeof(obj) {
        if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") {
          _typeof = function _typeof(obj) {
            return typeof obj;
          };
        } else {
          _typeof = function _typeof(obj) {
            return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj;
          };
        }

        return _typeof(obj);
      }

      // https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects
      _typeof('null') === null;
      _typeof('undefined') === undefined;
      _typeof('AggregateError') === \\"object\\";
      _typeof('Array') === \\"object\\";
      _typeof('ArrayBuffer') === \\"ArrayBuffer\\";
      _typeof('AsyncFunction') === [];
      _typeof('Atomics') === {};
      _typeof('BigInt') === function() {};
      _typeof('BigInt64Array') === (0, function() {})();
      _typeof('BigUint64Array') === true;
      _typeof('Boolean') === false;
      _typeof('DataView') === 1;
      _typeof('Date') !== \\"object\\";
      _typeof('Error') === Error;
      _typeof('EvalError') === \\"object\\";
      _typeof('Float32Array') === \\"object\\";
      _typeof('Function') === \\"object\\";
      _typeof('Generator') === \\"object\\";
      _typeof('GeneratorFunction') === \\"object\\";
      _typeof('Infinity') === \\"object\\";
      _typeof('Int16Array') === \\"object\\";
      _typeof('Int32Array') === \\"object\\";
      _typeof('Int8Array') === \\"object\\";
      _typeof('InternalError') === \\"object\\";
      _typeof('Intl') === \\"object\\";
      _typeof('JSON') === \\"object\\";
      _typeof('Map') === \\"object\\";
      _typeof('Math') === \\"object\\";
      _typeof('NaN') === \\"object\\";
      _typeof('Number') === \\"object\\";
      _typeof('Object') === \\"object\\";
      _typeof('Promise') === \\"object\\";
      _typeof('Proxy') === \\"object\\";
      _typeof('RangeError') === \\"object\\";
      _typeof('ReferenceError') === \\"object\\";
      _typeof('Reflect') === \\"object\\";
      _typeof('RegExp') === \\"object\\";
      _typeof('Set') === \\"object\\";
      _typeof('SharedArrayBuffer') === \\"object\\";
      _typeof('String') === \\"object\\";
      _typeof('Symbol') === \\"object\\";
      _typeof('SyntaxError') === \\"object\\";
      _typeof('TypeError') === \\"object\\";
      _typeof('TypedArray') === \\"object\\";
      _typeof('URIError') === \\"object\\";
      _typeof('Uint16Array') === \\"object\\";
      _typeof('Uint32Array') === \\"object\\";
      _typeof('Uint8Array') === \\"object\\";
      _typeof('Uint8ClampedArray') === \\"object\\";
      _typeof('WeakMap') === \\"object\\";
      _typeof('WeakSet') === \\"object\\";
      _typeof('WebAssembly') === \\"object\\";
      _typeof('decodeURI') === \\"object\\";
      _typeof('decodeURIComponent') === \\"object\\";
      _typeof('encodeURI') === \\"object\\";
      _typeof('encodeURIComponent') === \\"object\\";
      _typeof('escape') === \\"object\\";
      _typeof('eval') === \\"object\\";
      _typeof('globalThis') === \\"object\\";
      _typeof('isFinite') === \\"object\\";
      _typeof('isNaN') === \\"object\\";
      _typeof('parseFloat') === \\"object\\";
      _typeof('parseInt') === \\"object\\";
      _typeof('unescape') === \\"object\\";
      _typeof('uneval') === \\"object\\";
    },
    {},
  ]
})"
`;

exports[`typeof-symbol typeof-typeof 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      function _typeof(obj) {
        if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") {
          _typeof = function _typeof(obj) {
            return typeof obj;
          };
        } else {
          _typeof = function _typeof(obj) {
            return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj;
          };
        }

        return _typeof(obj);
      }

      _typeof(_typeof(_typeof(_typeof(\\"String\\")))) === \\"object\\";
      _typeof(_typeof(_typeof(typeof Error === \\"undefined\\" ? \\"undefined\\" : _typeof(Error)))) === \\"object\\";
    },
    {},
  ]
})"
`;
